[tool.poetry]
name = "minos-analysis"
version = "0.1.0"
description = "Code used for the re-analysis of MINOS/MINOS+ experiment at Fermilab (or FNAL)."
authors = ["Aditya Marathe <72881014+aditya-marathe@users.noreply.github.com>"]
license = "GNU General Public License Version 3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "<=1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
