[tool.poetry]
name = "minos-analysis"
version = "0.1.0"
description = "Code used for the re-analysis of MINOS/MINOS+ experiment at Fermilab (or FNAL)."
authors = ["Aditya Marathe <72881014+aditya-marathe@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "*"  # Left floating because of TF requirements
pandas = "^2.2.3"
uproot = "^5.5.1"
awkward = "^2.7.3"
awkward-pandas = "^2023.8.0"
matplotlib = "^3.10.0"
scikit-learn = "*"
tensorflow = "*"
torch = "*"
torchvision = "*"

# Local dependencies
oscana = { path = "../oscana", develop = true }
keras = "^3.9.0"

[tool.black]
# Settings for the Black code formatter
line-length = 80

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipympl = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
